--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.CSIT314SDM" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!--
+          Customize your dark theme here.
+          For example:
+          <item name="colorPrimary">@color/purple_200</item>
+          <item name="colorPrimaryVariant">@color/purple_700</item>
+          <item name="colorOnPrimary">@color/black</item>
+        -->
     </style>
+
+    <style name="Theme.CSIT314SDM" parent="Base.Theme.CSIT314SDM" />
 </resources>
