--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,14 +12,25 @@
             android:id="@+id/nav_my_requests"
             android:icon="@drawable/ic_my_requests"
             android:title="My Requests" />
+
+        <!-- Assuming you have this icon -->
         <item
             android:id="@+id/nav_my_matches"
             android:icon="@drawable/ic_star"
             android:title="My Matches" />
+
+        <!-- A good built-in icon for history -->
+        <item
+            android:id="@+id/nav_history"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="Completion History" />
+
+        <!-- Assuming you have this icon -->
         <item
             android:id="@+id/nav_browse_services"
             android:icon="@drawable/ic_browse"
             android:title="Browse Services" />
+
         <item
             android:id="@+id/nav_my_profile"
             android:icon="@drawable/ic_profile"
