--- a/app/src/main/res/layout/activity_platform_dashboard.xml
+++ b/app/src/main/res/layout/activity_platform_dashboard.xml
@@ -1,31 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:gravity="center">
+    android:padding="16dp">
 
     <TextView
+        android:id="@+id/tvDashboardTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Platform Dashboard"
         android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
-        android:layout_marginBottom="32dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBottom_toTopOf="@+id/btnManageCategories"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
     <Button
         android:id="@+id/btnManageCategories"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Manage Help Categories"/>
+        android:text="Manage Help Categories"
+        app:layout_constraintTop_toBottomOf="@id/tvDashboardTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnDailyReportGenerate"
+        android:layout_marginTop="24dp"/>
+
+    <Button
+        android:id="@+id/btnDailyReportGenerate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Daily Report Generate"
+        app:layout_constraintTop_toBottomOf="@id/btnManageCategories"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnWeeklyReportGenerate"/>
+
+    <Button
+        android:id="@+id/btnWeeklyReportGenerate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Weekly Report Generate"
+        app:layout_constraintTop_toBottomOf="@id/btnDailyReportGenerate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnMonthlyReportGenerate"/>
+
+    <Button
+        android:id="@+id/btnMonthlyReportGenerate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Monthly Report Generate"
+        app:layout_constraintTop_toBottomOf="@id/btnWeeklyReportGenerate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlatformLogout"/>
 
     <Button
         android:id="@+id/btnPlatformLogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         style="@style/Widget.Material3.Button.OutlinedButton"
-        android:text="Logout"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
