--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -137,6 +137,39 @@
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
+            <!--- NEW: Action Card for "Retrieve User Accounts" card -->
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardUpdateUserAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp"
+                android:layout_marginBottom="16dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Update User Account"
+                        android:textSize="20sp"
+                        android:textColor="?android:attr/textColorPrimary"
+                        android:fontFamily="sans-serif-medium"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="Search for a user to modify their details."/>
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+
             <!-- NEW: Action Card for Retrieving User Profile -->
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cardRetrieveUserProfile"
