--- a/app/src/main/res/layout/activity_monthly_report.xml
+++ b/app/src/main/res/layout/activity_monthly_report.xml
@@ -39,7 +39,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnGenerateReportM"
+        android:id="@+id/btnGenerateReport"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -55,7 +55,7 @@
         android:layout_marginTop="24dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/btnGenerateReportM"
+        app:layout_constraintTop_toBottomOf="@id/btnGenerateReport"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
