--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -24,8 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_user_detail_title"
-            android:text=""
+            android:text="User Profile Details"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_centerInParent="true"
