update9. New Update that includes wuxian, Mervin, Dylan, Sunji and christel's parts. The search and filter functions have been included and fixed. Only left suhaila's part

--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -21,7 +21,10 @@
             android:src="@drawable/ic_arrow_back"
             android:contentDescription="Back" />
 
+
+
         <TextView
+            android:id="@+id/tvToolbarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Profile Details"
@@ -29,6 +32,7 @@
             android:textStyle="bold"
             android:layout_centerInParent="true"
             android:textColor="@android:color/black" />
+
 
         <!-- NEW: Edit/Save Toggle Button -->
         <Button
